# Nimble

./: CMakeLists.txt  HELP.md  LICENSE  Nimble.kdev4  README.md  README_CLEAN.md  Requierments.md  keybindings.json  nimble  preferences.json
.kdev4/: Nimble.kdev4
plugins/: csv_plugin.cpp  example_plugin.cpp  markdown_plugin.cpp
src/: editor.cpp  editor.h  editor_backup.cpp  filebrowser.cpp  filebrowser.h  main.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
src/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
src/nlohmann/detail/: exceptions.hpp  json_pointer.hpp  macro_scope.hpp  string_escape.hpp
tests/: test_csv.cpp  test_markdown.cpp
